Modified to show swagger page as home page.
