# design/public.go
@@ -8,5 +8,8 @@ var _ = Resource("public", func() {
 	Origin("*", func() {
 		Methods("GET", "OPTIONS")
 	})
-	Files("/*filepath", "public/")
+	Files("/", "public/swagger/")
+	Files("/index.html", "public/swagger/")
+	Files("/swagger", "public/swagger/")
+
 })
