# swagger/swagger.yaml
@@ -65,70 +65,23 @@ definitions:
     - vote
     title: VoteTopicPayload
     type: object
-  error:
-    description: Error response media type (default view)
-    example:
-      code: invalid_value
-      detail: Value of ID must be an integer
-      id: 3F1FKVRR
-      meta:
-        timestamp: 1.458609066e+09
-      status: "400"
-    properties:
-      code:
-        description: an application-specific error code, expressed as a string value.
-        example: invalid_value
-        type: string
-      detail:
-        description: a human-readable explanation specific to this occurrence of the
-          problem.
-        example: Value of ID must be an integer
-        type: string
-      id:
-        description: a unique identifier for this particular occurrence of the problem.
-        example: 3F1FKVRR
-        type: string
-      meta:
-        additionalProperties: true
-        description: a meta object containing non-standard meta-information about
-          the error.
-        example:
-          timestamp: 1.458609066e+09
-        type: object
-      status:
-        description: the HTTP status code applicable to this problem, expressed as
-          a string value.
-        example: "400"
-        type: string
-    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
-    type: object
 info:
   description: Carousell Challenge.
   title: Carousell Challenge
   version: "0.1"
 paths:
-  /{filepath}:
+  /:
     get:
-      operationId: public#/*filepath
-      parameters:
-      - description: Relative file path
-        in: path
-        name: filepath
-        required: true
-        type: string
+      operationId: public#/
       responses:
         "200":
           description: File downloaded
           schema:
             type: file
-        "404":
-          description: File not found
-          schema:
-            $ref: '#/definitions/error'
       schemes:
       - http
       - https
-      summary: Download public/
+      summary: Download public/swagger/
   /api/v1/topics:
     get:
       description: Show top topics
@@ -302,6 +255,30 @@ paths:
       summary: login user
       tags:
       - user
+  /index.html:
+    get:
+      operationId: public#/index.html
+      responses:
+        "200":
+          description: File downloaded
+          schema:
+            type: file
+      schemes:
+      - http
+      - https
+      summary: Download public/swagger/
+  /swagger:
+    get:
+      operationId: public#/swagger
+      responses:
+        "200":
+          description: File downloaded
+          schema:
+            type: file
+      schemes:
+      - http
+      - https
+      summary: Download public/swagger/
   /swagger.json:
     get:
       operationId: swagger#/swagger.json
